--- a/css/main.css
+++ b/css/main.css
@@ -406,6 +406,22 @@ li{
 	display:none;
 	
 }
+.menu-caption p::after{
+	content: "";
+	float: right;
+	width: 0px; 
+	height:5px; 
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-bottom: 10px solid black;
+}
+.nav-section:hover  p::after{
+	margin-top:5px; 
+	border-left: 10px solid transparent;
+	border-right: 10px solid transparent;
+	border-top: 10px solid black;
+	border-bottom: 0;
+}
 .menu li{
 	padding:5px 5px 5px 0px;
 	border-bottom:1px solid gray;
@@ -453,7 +469,9 @@ section a{
 }
 
 .tabs>ul a{
-	border:3px solid grey;
+	border-width:3px 3px 0 3px;
+	border-color:grey;
+	border-style: solid;
 }
 
 .tabs>ul>.active {
