--- a/css/main.css
+++ b/css/main.css
@@ -537,11 +537,17 @@ iframe {
 }
 
 select{
-	margin: 20px 0px 0px 50px;
-	width: 150px;
+	margin: 20px 0px 0px 10px;
+	min-width: 150px;
 	font-size: 16px;
 	padding: 2px 0 2px 5px;
 
+}
+.selectSite{
+	margin: 20px 0px 0px 10px;
+	font-size: 16px;
+	text-decoration: underline;
+	font-weight: bold;
 }
 
 form .img{
